# fsa2016

./: FSA1.hs  FSA2.hs  FSA3.hs  FSA4.hs  FSA5.hs  FSAlab1.lhs  FSAlab2.hs  FSAlab3.hs  FSAlab4.hs  FSAlab5.hs  FridaySession1.lhs  FridaySession2.hs  FridaySession3.lhs  FridaySession3.md  FridaySession4.lhs  FridaySession4.md  FridaySession5.lhs  README.md  fsa2016.cabal
