name:          fsa2016
version:       0.1.0.0
build-type:    Simple
cabal-version: >= 1.2

library
  ghc-options:      -Wall -fobject-code
  exposed-modules:  FSA1
                    FSA2
                    FSA3
                    FSA4
                    FSAlab1
                    FSAlab2
                    FSAlab3
                    FridaySession3
  build-depends:    base >= 4.7 && < 5,
                    arithmoi,
                    mtl,
                    QuickCheck,
                    random
