name:          fsa2016
version:       0.1.0.0
build-type:    Simple
cabal-version: >= 1.2

library
  ghc-options:      -Wall -fobject-code
  exposed-modules:  FSA1
                    FSA2
                    FSA3
                    FSA4
                    FSA5
                    FSAlab1
                    FSAlab2
                    FSAlab3
                    FSAlab4
                    FSAlab5
                    FridaySession1
                    FridaySession3
                    FridaySession5
  build-depends:    base >= 4.7 && < 5,
                    arithmoi,
                    mtl,
                    QuickCheck,
                    random
